--- a/driver/Dockerfile
+++ b/driver/Dockerfile
@@ -6,7 +6,7 @@ ENV MAMBA_ROOT_PREFIX /root/micromamba
 ENV PATH $MAMBA_ROOT_PREFIX/bin:$PATH
 ENV HAIL_QUERY_BACKEND local
 
-RUN apt-get update && apt-get install -y apt-transport-https bash bzip2 ca-certificates git gnupg jq wget zip && \
+RUN apt-get update && apt-get install -y apt-transport-https bash bzip2 ca-certificates curl git gnupg jq wget zip && \
     echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
     curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add - && \
     apt update && apt install -y google-cloud-sdk && \
