Use a slimmer default driver image that doesn't contain conda / R (#344)
* Use a slimmer default driver image that doesn't contain conda / R.

Fix rev

Install pip

Install Hail dependencies

Fix rev

Fix

Fix rev

* Bump version: 2.14.0 → 2.15.0

* Fix rev

* Switch back to query service backend by default (#345)

* Simplify Docker image tag reference

* Don't build R image automatically

* Fix hail image build

* Update docs

* Fix R image tag

* Add Dockerfiles

* Update driver/README.md

Co-authored-by: Michael Franklin <michael.franklin@populationgenomics.org.au>

Co-authored-by: Michael Franklin <michael.franklin@populationgenomics.org.au>

--- a/.github/workflows/hail_update.yaml
+++ b/.github/workflows/hail_update.yaml
@@ -36,7 +36,7 @@ jobs:
 
     - name: "build driver image"
       run: |
-        docker build --build-arg HAIL_VERSION=${{ github.event.inputs.hail_version }} --tag $DRIVER_IMAGE driver
+        docker build -f driver/Dockerfile.hail --build-arg HAIL_VERSION=${{ github.event.inputs.hail_version }} --tag $DRIVER_IMAGE driver
 
     - name: "push driver image"
       run: |
