--- a/.github/workflows/hail_update.yaml
+++ b/.github/workflows/hail_update.yaml
@@ -55,7 +55,7 @@ jobs:
 
     - name: "deploy server-test"
       run: |
-        gcloud run deploy server-test --region australia-southeast1 --no-allow-unauthenticated --platform managed --set-env-vars=DRIVER_IMAGE=$DRIVER_IMAGE,TZ=Australia/Sydney,HAIL_SHA=${{ github.event.inputs.hail_sha }} --image $SERVER_IMAGE
+        gcloud run deploy server-test --region australia-southeast1 --no-allow-unauthenticated --platform managed --set-env-vars=DRIVER_IMAGE=$DRIVER_IMAGE,HAIL_SHA=${{ github.event.inputs.hail_sha }} --image $SERVER_IMAGE
 
     - name: "submit test batch"
       run: |
@@ -69,4 +69,4 @@ jobs:
 
     - name: "deploy server"
       run: |
-        gcloud run deploy server --region australia-southeast1 --no-allow-unauthenticated --platform managed --set-env-vars=DRIVER_IMAGE=$DRIVER_IMAGE,TZ=Australia/Sydney,HAIL_SHA=${{ github.event.inputs.hail_sha }} --image $SERVER_IMAGE
+        gcloud run deploy server --region australia-southeast1 --no-allow-unauthenticated --platform managed --set-env-vars=DRIVER_IMAGE=$DRIVER_IMAGE,HAIL_SHA=${{ github.event.inputs.hail_sha }} --image $SERVER_IMAGE
