--- a/.github/workflows/deploy_server.yaml
+++ b/.github/workflows/deploy_server.yaml
@@ -1,16 +1,11 @@
-# This workflow is triggered after a new version of Hail has been built, with a
-# corresponding pip package. It leads to new driver and server Docker images being
-# built, followed by the deployment of the server.
-name: Deploy analysis-runner server after Hail update
+name: Deploy analysis-runner server
 on:
   workflow_dispatch:
     inputs:
-      hail_version:
-        description: 'Hail version (as uploaded to PyPI)'
-        required: true
       hail_sha:
         description: 'Hail GitHub commit SHA'
         required: true
+        default: 'HEAD'
 
 jobs:
   deploy_server:
@@ -20,12 +15,25 @@ jobs:
       DOCKER_BUILDKIT: 1
       BUILDKIT_PROGRESS: plain
       CLOUDSDK_CORE_DISABLE_PROMPTS: 1
-      DRIVER_IMAGE: australia-southeast1-docker.pkg.dev/analysis-runner/images/driver:${{ github.sha }}-hail-${{ github.event.inputs.hail_version }}-${{ github.event.inputs.hail_sha }}
-      SERVER_IMAGE: australia-southeast1-docker.pkg.dev/analysis-runner/images/server:${{ github.sha }}-hail-${{ github.event.inputs.hail_version }}-${{ github.event.inputs.hail_sha }}
+      DRIVER_IMAGE: australia-southeast1-docker.pkg.dev/analysis-runner/images/driver:${{ github.sha }}-hail-${{ github.event.inputs.hail_sha }}
+      SERVER_IMAGE: australia-southeast1-docker.pkg.dev/analysis-runner/images/server:${{ github.sha }}-hail-${{ github.event.inputs.hail_sha }}
 
     steps:
-    - name: "checkout repo"
-      uses: actions/checkout@v2
+    - name: "checkout analysis-runner repo"
+      uses: actions/checkout@v3
+
+    - name: "checkout Hail repo"
+      uses: actions/checkout@v3
+      with:
+        repository: "populationgenomics/hail"
+        ref: ${{ github.event.inputs.hail_sha }}
+        path: "hail"
+
+    - name: "Determine Hail pip version"
+      run: |
+        cd hail/hail
+        make python/hail/hail_pip_version
+        echo "HAIL_PIP_VERSION=$(cat python/hail/hail_pip_version)" >> $GITHUB_ENV
 
     - name: "gcloud setup"
       uses: google-github-actions/setup-gcloud@master
@@ -39,7 +47,7 @@ jobs:
 
     - name: "build driver image"
       run: |
-        docker build -f driver/Dockerfile.hail --build-arg HAIL_VERSION=${{ github.event.inputs.hail_version }} --tag $DRIVER_IMAGE driver
+        docker build -f driver/Dockerfile.hail --build-arg HAIL_PIP_VERSION=$HAIL_PIP_VERSION --tag $DRIVER_IMAGE driver
 
     - name: "push driver image"
       run: |
