--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -1,7 +1,7 @@
 # This image adds Hail and some other Python-based stats libraries to the base image.
 FROM australia-southeast1-docker.pkg.dev/analysis-runner/images/driver-base:1.0
 
-ARG HAIL_VERSION
+ARG HAIL_PIP_VERSION
 
 ENV HAIL_QUERY_BACKEND service
 
@@ -13,7 +13,7 @@ RUN mkdir /usr/share/man/man1 && \
     pip3 install \
         analysis-runner \
         bokeh \
-        hail==$HAIL_VERSION \
+        hail==$HAIL_PIP_VERSION \
         cpg-utils \
         phantomjs \
         sample-metadata \
