--- a/.github/workflows/deploy_server.yaml
+++ b/.github/workflows/deploy_server.yaml
@@ -5,7 +5,7 @@ on:
       hail_sha:
         description: 'Hail GitHub commit SHA'
         required: true
-        default: 'HEAD'
+        default: "HEAD"
 
 jobs:
   deploy_server:
