--- a/.github/workflows/deploy_server.yaml
+++ b/.github/workflows/deploy_server.yaml
@@ -34,6 +34,9 @@ jobs:
         cd hail
         make python/hail/hail_pip_version
         echo "HAIL_PIP_VERSION=$(cat python/hail/hail_pip_version)" >> $GITHUB_ENV
+
+    - name: "Set Docker image paths"
+      run: |
         echo "DRIVER_IMAGE=australia-southeast1-docker.pkg.dev/analysis-runner/images/driver:${{ github.sha }}-hail-$HAIL_SHA" >> $GITHUB_ENV
         echo "SERVER_IMAGE=australia-southeast1-docker.pkg.dev/analysis-runner/images/server:${{ github.sha }}-hail-$HAIL_SHA" >> $GITHUB_ENV
 
