--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -1,7 +1,7 @@
 # This image adds Hail and some other Python-based stats libraries to the base image.
 FROM australia-southeast1-docker.pkg.dev/analysis-runner/images/driver-base:1.0
 
-ARG HAIL_PIP_VERSION
+ARG HAIL_SHA
 
 ENV HAIL_QUERY_BACKEND service
 
@@ -13,9 +13,18 @@ RUN mkdir /usr/share/man/man1 && \
     pip3 install \
         analysis-runner \
         bokeh \
-        hail==$HAIL_PIP_VERSION \
         cpg-utils \
         phantomjs \
         sample-metadata \
         selenium \
-        statsmodels
+        statsmodels && \
+    # Install Hail from the CPG fork.
+    git clone https://github.com/populationgenomics/hail.git && \
+    cd hail && \
+    git checkout $HAIL_SHA && \
+    cd hail && \
+    # Install locally, avoiding the need for a pip package.
+    # DEPLOY_REMOTE avoids a dev suffix being appended to dataproc initialization paths.
+    make install DEPLOY_REMOTE=1 && \
+    cd ../.. && \
+    rm -rf hail
