--- a/.github/workflows/deploy_web_server.yaml
+++ b/.github/workflows/deploy_web_server.yaml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: "gcloud setup"
-      uses: google-github-actions/setup-gcloud@main
+      uses: google-github-actions/setup-gcloud@v0
       with:
         project_id: analysis-runner
         service_account_key: ${{ secrets.GCP_SERVER_DEPLOY_KEY }}
