--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -18,6 +18,7 @@ RUN apt update && \
     pip3 install \
         analysis-runner \
         bokeh \
+        cloudpathlib[all] \
         cpg-utils \
         phantomjs \
         sample-metadata \
