add cpg-pipes into driver image

--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -19,6 +19,7 @@ RUN apt update && \
         analysis-runner \
         bokeh \
         cloudpathlib[all] \
+        cpg-pipes \
         cpg-utils \
         phantomjs \
         sample-metadata \
