Use a non-empty Pulumi passphrase

--- a/stack/Pulumi.amp-pd.yaml
+++ b/stack/Pulumi.amp-pd.yaml
@@ -1,4 +1,4 @@
-encryptionsalt: v1:SPQXlVggjxw=:v1:X1sTpViNuyK+Wcom:3GANI8gZOKtk0gG7BklsyHeNU5uVLw==
+encryptionsalt: v1:D8dQvZ0XV+g=:v1:rXK8WJO0MvgIvMaI:v7Iufo3xyRDi2xjZCNyWPaZWuJHjhg==
 config:
   datasets:customer_id: C010ys3gt
   datasets:enable_release: "false"
