--- a/stack/Pulumi.hgdp.yaml
+++ b/stack/Pulumi.hgdp.yaml
@@ -1,4 +1,4 @@
-encryptionsalt: v1:SPQXlVggjxw=:v1:X1sTpViNuyK+Wcom:3GANI8gZOKtk0gG7BklsyHeNU5uVLw==
+encryptionsalt: v1:JXjceFKIHMQ=:v1:Gpf9lPdxHruUVQmT:h2j3gWEx/QYoXqhBVEKfb1WTxFmgyQ==
 config:
   datasets:customer_id: C010ys3gt
   datasets:enable_release: "false"
