--- a/stack/Pulumi.rdnow.yaml
+++ b/stack/Pulumi.rdnow.yaml
@@ -1,4 +1,4 @@
-encryptionsalt: v1:Fqx5NHuwjAg=:v1:h0vU5VjoszHXllH7:tUAorwiljPS1C1Ft18iHzaO0c+HOpg==
+encryptionsalt: v1:Eow8wdttJWw=:v1:kYu/tZqiEIwNkEUq:icy3Ak05Rfufv7sugS1Rv2Uv24Y3MQ==
 config:
   datasets:archive_age: "365"
   datasets:customer_id: C010ys3gt
