--- a/stack/Pulumi.sgs-somatic-mtn.yaml
+++ b/stack/Pulumi.sgs-somatic-mtn.yaml
@@ -1,12 +1,12 @@
+encryptionsalt: v1:fbHhPtB3iKM=:v1:Ml3oc0IZx0iYBTfT:Gj+9iNqDLRLFu4wczbn0J7WzZ9M2MQ==
 config:
-  datasets:archive_age: '90'
+  datasets:archive_age: "90"
   datasets:customer_id: C010ys3gt
   datasets:depends_on: '["tob-wgs"]'
-  datasets:enable_release: false
+  datasets:enable_release: "false"
   datasets:hail_service_account_full: sgs-somatic-mtn-full-952@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_standard: sgs-somatic-mtn-standard-951@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_test: sgs-somatic-mtn-test-910@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: sgs-somatic-mtn
   gcp:project: sgs-somatic-mtn
-  gcp:user_project_override: 'true'
-encryptionsalt: v1:SPQXlVggjxw=:v1:X1sTpViNuyK+Wcom:3GANI8gZOKtk0gG7BklsyHeNU5uVLw==
+  gcp:user_project_override: "true"
