--- a/stack/Pulumi.tob-wgs.yaml
+++ b/stack/Pulumi.tob-wgs.yaml
@@ -1,4 +1,4 @@
-encryptionsalt: v1:Fqx5NHuwjAg=:v1:h0vU5VjoszHXllH7:tUAorwiljPS1C1Ft18iHzaO0c+HOpg==
+encryptionsalt: v1:hvLhhm9fb3I=:v1:EsHK5ZQWy64oDB0F:9I83xiwWC+M3L4mKXmeTthOtRMpwrg==
 config:
   datasets:archive_age: "365"
   datasets:customer_id: C010ys3gt
