--- a/stack/Pulumi.acute-care.yaml
+++ b/stack/Pulumi.acute-care.yaml
@@ -1,10 +1,10 @@
-encryptionsalt: v1:SPQXlVggjxw=:v1:X1sTpViNuyK+Wcom:3GANI8gZOKtk0gG7BklsyHeNU5uVLw==
+encryptionsalt: v1:5XCoeF4ZR7Y=:v1:qSkpXOsdeu3/2u5u:3+lAw+SPKOJpKrnd4BCFHacE+OEiHQ==
 config:
   datasets:customer_id: C010ys3gt
   datasets:enable_release: "false"
-  datasets:hail_service_account_test: acute-care-test-952@hail-295901.iam.gserviceaccount.com
-  datasets:hail_service_account_standard: acute-care-standard-211@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_full: acute-care-full-677@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_standard: acute-care-standard-211@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_test: acute-care-test-952@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: acute-care-321904
   gcp:project: acute-care-321904
   gcp:user_project_override: "true"
