--- a/stack/Pulumi.circa.yaml
+++ b/stack/Pulumi.circa.yaml
@@ -1,11 +1,11 @@
+encryptionsalt: v1:8aq+s/xlFOg=:v1:MJu2uc4yTYAnKueS:tKGPjCaNfxIkYLSl/grwIdeD3WGZ+g==
 config:
-  datasets:archive_age: '90'
+  datasets:archive_age: "90"
   datasets:customer_id: C010ys3gt
-  datasets:enable_release: false
+  datasets:enable_release: "false"
   datasets:hail_service_account_full: circa-full-874@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_standard: circa-standard-342@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_test: circa-test-707@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: circa-716939
   gcp:project: circa-716939
-  gcp:user_project_override: 'true'
-encryptionsalt: v1:SPQXlVggjxw=:v1:X1sTpViNuyK+Wcom:3GANI8gZOKtk0gG7BklsyHeNU5uVLw==
+  gcp:user_project_override: "true"
