--- a/stack/Pulumi.mgrb.yaml
+++ b/stack/Pulumi.mgrb.yaml
@@ -1,10 +1,10 @@
-encryptionsalt: v1:SPQXlVggjxw=:v1:X1sTpViNuyK+Wcom:3GANI8gZOKtk0gG7BklsyHeNU5uVLw==
+encryptionsalt: v1:4KFuYqcNWII=:v1:gYxs8Xy2HNHB39td:mbfpSlBngXywnPc6E4Q9dHrhan1gnw==
 config:
   datasets:customer_id: C010ys3gt
   datasets:enable_release: "false"
-  datasets:hail_service_account_test: mgrb-test-991@hail-295901.iam.gserviceaccount.com
-  datasets:hail_service_account_standard: mgrb-standard-867@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_full: mgrb-full-205@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_standard: mgrb-standard-867@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_test: mgrb-test-991@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: mgrb-324606
   gcp:project: mgrb-324606
   gcp:user_project_override: "true"
