--- a/stack/Pulumi.mito-disease.yaml
+++ b/stack/Pulumi.mito-disease.yaml
@@ -1,11 +1,11 @@
+encryptionsalt: v1:SxEz0lFrRiI=:v1:gyVLq9hk279AA6rT:KHVg0uvPN3w1MNH2V3TLKP8eEck71A==
 config:
-  datasets:archive_age: '90'
+  datasets:archive_age: "90"
   datasets:customer_id: C010ys3gt
-  datasets:enable_release: false
+  datasets:enable_release: "false"
   datasets:hail_service_account_full: mito-disease-full-261@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_standard: mito-disease-standard-971@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_test: mito-disease-test-091@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: mito-disease
   gcp:project: mito-disease
-  gcp:user_project_override: 'true'
-encryptionsalt: v1:SPQXlVggjxw=:v1:X1sTpViNuyK+Wcom:3GANI8gZOKtk0gG7BklsyHeNU5uVLw==
+  gcp:user_project_override: "true"
