--- a/stack/Pulumi.nagim.yaml
+++ b/stack/Pulumi.nagim.yaml
@@ -1,12 +1,12 @@
-encryptionsalt: v1:58BWphXSDio=:v1:9KydLgEdNGdRloZf:phZCGaeRzAGsTdOdTWBG1Wbu6GtX3w==
+encryptionsalt: v1:Q80eKPAJdCg=:v1:+8fEdcyO1DzyL1lk:CHCfZDWmmre+vP4hqabfiAuVGe3d2A==
 config:
   datasets:archive_age: "30"
   datasets:customer_id: C010ys3gt
   datasets:depends_on: '["acute-care", "mgrb", "hgdp", "tob-wgs", "amp-pd"]'
   datasets:enable_release: "true"
-  datasets:hail_service_account_test: nagim-test-133@hail-295901.iam.gserviceaccount.com
-  datasets:hail_service_account_standard: nagim-standard-388@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_full: nagim-full-637@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_standard: nagim-standard-388@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_test: nagim-test-133@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: nagim-331712
   gcp:project: nagim-331712
   gcp:user_project_override: "true"
