--- a/stack/Pulumi.ozrefdb.yaml
+++ b/stack/Pulumi.ozrefdb.yaml
@@ -1,10 +1,10 @@
-encryptionsalt: v1:SPQXlVggjxw=:v1:X1sTpViNuyK+Wcom:3GANI8gZOKtk0gG7BklsyHeNU5uVLw==
+encryptionsalt: v1:WYzpkJzk5hc=:v1:l6nOJ4Q9OOy9bxxH:lNEmyWR30lp27GpNRS7hXsDCIZuqag==
 config:
   datasets:customer_id: C010ys3gt
   datasets:enable_release: "false"
-  datasets:hail_service_account_test: ozrefdb-test-942@hail-295901.iam.gserviceaccount.com
-  datasets:hail_service_account_standard: ozrefdb-standard-044@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_full: ozrefdb-full-353@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_standard: ozrefdb-standard-044@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_test: ozrefdb-test-942@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: ozrefdb
   gcp:project: ozrefdb
   gcp:user_project_override: "true"
