--- a/stack/Pulumi.perth-neuro.yaml
+++ b/stack/Pulumi.perth-neuro.yaml
@@ -1,4 +1,4 @@
-encryptionsalt: v1:SPQXlVggjxw=:v1:X1sTpViNuyK+Wcom:3GANI8gZOKtk0gG7BklsyHeNU5uVLw==
+encryptionsalt: v1:CR7NcWa6Gow=:v1:3wARqSvegApVW7wt:m7o6T0MLostuo9MhWglV9TGLG4Tdfw==
 config:
   datasets:customer_id: C010ys3gt
   datasets:enable_release: "false"
