--- a/stack/Pulumi.prophecy.yaml
+++ b/stack/Pulumi.prophecy.yaml
@@ -1,11 +1,11 @@
-encryptionsalt: v1:SPQXlVggjxw=:v1:X1sTpViNuyK+Wcom:3GANI8gZOKtk0gG7BklsyHeNU5uVLw==
+encryptionsalt: v1:HnxRVRG7Hh4=:v1:bkmfeYt3VQ495mTD:8KMTdKguBd3EATg9It2lkMxgT7/ySg==
 config:
   datasets:archive_age: "90"
   datasets:customer_id: C010ys3gt
   datasets:enable_release: "true"
-  datasets:hail_service_account_test: prophecy-test-998@hail-295901.iam.gserviceaccount.com
-  datasets:hail_service_account_standard: prophecy-standard-432@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_full: prophecy-full-674@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_standard: prophecy-standard-432@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_test: prophecy-test-998@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: prophecy-339301
   gcp:project: prophecy-339301
   gcp:user_project_override: "true"
