--- a/stack/Pulumi.ravenscroft-rdstudy.yaml
+++ b/stack/Pulumi.ravenscroft-rdstudy.yaml
@@ -1,11 +1,11 @@
-encryptionsalt: v1:Fqx5NHuwjAg=:v1:h0vU5VjoszHXllH7:tUAorwiljPS1C1Ft18iHzaO0c+HOpg==
+encryptionsalt: v1:MshUGtT34Lo=:v1:aecO7XZ6waAXGeqi:cLP6sYn1g8neuf9fcQvKI79l9ktzmA==
 config:
   datasets:archive_age: "365"
   datasets:customer_id: C010ys3gt
   datasets:enable_release: "false"
-  datasets:hail_service_account_test: ravenscroft-rd-test-046@hail-295901.iam.gserviceaccount.com
-  datasets:hail_service_account_standard: ravenscroft-rd-standard-839@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_full: ravenscroft-rd-full-143@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_standard: ravenscroft-rd-standard-839@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_test: ravenscroft-rd-test-046@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: ravenscroft-rdstudy
   gcp:project: ravenscroft-rdstudy
   gcp:user_project_override: "true"
