--- a/stack/Pulumi.schr-neuro.yaml
+++ b/stack/Pulumi.schr-neuro.yaml
@@ -1,11 +1,11 @@
+encryptionsalt: v1:QKhiWT81LGo=:v1:46HJk1I59AhDuYxA:+vYoxitwRsmKI7/blfLf6mrTxYx95g==
 config:
-  datasets:archive_age: '90'
+  datasets:archive_age: "90"
   datasets:customer_id: C010ys3gt
-  datasets:enable_release: false
+  datasets:enable_release: "false"
   datasets:hail_service_account_full: schr-neuro-full-706@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_standard: schr-neuro-standard-457@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_test: schr-neuro-test-891@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: schr-neuro
   gcp:project: schr-neuro
-  gcp:user_project_override: 'true'
-encryptionsalt: v1:SPQXlVggjxw=:v1:X1sTpViNuyK+Wcom:3GANI8gZOKtk0gG7BklsyHeNU5uVLw==
+  gcp:user_project_override: "true"
