Automate dataset creation with new_stack script (#300)
* Automate dataset creation with new_stack script

* Move dataset length check to new_stack script

* Add encoding to satisfy pylint

* Parameterise script + add more features

* Add some safety to ensure code runs in "stack" directory

* Add better logging + --perform-all command

* Add stub for adding dataset to tokens/repository-map.json

* Rewrite budget creation using budget apis

* Make script more stable to re-running

* Fix linting issues

* Address more linting issues

* Add comment about environment requirements

* Improve files to add concept

* Add SM project creation to new_stack.py script

* Improve hail batch account creation support

* Improve adding tokens

* Improve logging + small issues

* Add example usage to new_stack.py

* More requirements docs

* Get hail SA client emails individually

--- a/.pylintrc
+++ b/.pylintrc
@@ -18,10 +18,10 @@
 # 11. similar lines
 # 12. import-error
 
-disable=f-string-without-interpolation,logging-fstring-interpolation,
-        inherit-non-class,too-few-public-methods,C0330,
-        C0326,fixme,line-too-long,too-many-statements,too-many-lines,
-        R0801,import-error
+disable=f-string-without-interpolation,logging-fstring-interpolation,inherit-non-class,
+            too-few-public-methods,C0330,C0326,fixme,line-too-long,too-many-statements,
+            too-many-lines,R0801,import-error,c-extension-no-member,
+
 
 # Overriding variable name patterns to allow short 1- or 2-letter variables
 attr-rgx=[a-z_][a-z0-9_]{0,30}$
