No need to install packages already included in analysis-runner

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,13 +2,7 @@
 ARG DRIVER_IMAGE
 FROM ${DRIVER_IMAGE}
 
-RUN pip install \
-    google-api-python-client==2.10.0 \
-    google-cloud-secret-manager==2.2.0 \
-    google-cloud-pubsub==2.3.0 \
-    google-cloud-logging==3.1.1 \
-    gunicorn \
-    requests
+RUN pip install gunicorn requests
 
 # Allow statements and log messages to immediately appear in the Knative logs.
 ENV PYTHONUNBUFFERED 1
