--- a/.pylintrc
+++ b/.pylintrc
@@ -20,7 +20,7 @@
 
 disable=f-string-without-interpolation,logging-fstring-interpolation,inherit-non-class,
             too-few-public-methods,C0330,C0326,fixme,line-too-long,too-many-statements,
-            too-many-lines,R0801,import-error,c-extension-no-member,
+            too-many-lines,R0801,import-error,c-extension-no-member,no-member
 
 
 # Overriding variable name patterns to allow short 1- or 2-letter variables
