--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -31,10 +31,10 @@ RUN apt update && \
         cpg-pipes \
         cpg-utils \
         phantomjs \
+        pyarrow \
         sample-metadata \
         selenium \
         statsmodels && \
-        pyarrow && \
     # Install Hail from the CPG fork.
     git clone https://github.com/populationgenomics/hail.git && \
     cd hail && \
