Add udn to seqr stack

--- a/stack/Pulumi.udn-aus.yaml
+++ b/stack/Pulumi.udn-aus.yaml
@@ -1,4 +1,4 @@
-encryptionsalt: v1:Cy/ddTjWMbo=:v1:HmnppenaIuJhlNrZ:mFzTNIcb296ycBaIZ83DP1T1Odobgg==
+encryptionsalt: v1:xGWSQxHXU4c=:v1:FOwxOMHaLTGOTlrH:q1uyutU+QQeCrhZBsz4/5+SBRRsRhA==
 config:
   datasets:archive_age: "90"
   datasets:customer_id: C010ys3gt
