Pin selenium version
To avoid `AttributeError: module 'selenium.webdriver' has no attribute 'PhantomJS'`.

--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -32,7 +32,7 @@ RUN apt update && \
         phantomjs \
         pyarrow \
         sample-metadata \
-        selenium \
+        selenium==3.8.0 \
         statsmodels && \
     # Install Hail from the CPG fork.
     git clone https://github.com/populationgenomics/hail.git && \
