--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -36,7 +36,7 @@ RUN apt-get update && \
         sample-metadata \
         selenium==3.8.0 \
         statsmodels && \
-    # Install phantomjs with a workaround for the libssl_conf.so:
+    # Install phantomjs with a workaround for libssl_conf.so:
     # https://github.com/bazelbuild/rules_closure/issues/351#issuecomment-854628326
     cd /opt && \
     curl -sSL https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2 | tar xj && \
