--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -5,9 +5,10 @@ ARG HAIL_SHA
 
 ENV HAIL_QUERY_BACKEND service
 
-RUN apt update && \
-    DEBIAN_FRONTEND=noninteractive apt install -y \
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
         g++ \
+        libfontconfig \
         liblapack3 \
         libopenblas-base \
         openjdk-8-jdk-headless \
@@ -30,11 +31,17 @@ RUN apt update && \
         cpg-pipes \
         cpg-utils \
         gcsfs \
-        phantomjs \
         pyarrow \
         sample-metadata \
         selenium==3.8.0 \
         statsmodels && \
+    # Install phantomjs with a workaround for libssl_conf.so:
+    # https://github.com/bazelbuild/rules_closure/issues/351#issuecomment-854628326
+    cd /opt && \
+    curl -sSL https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2 | tar xj && \
+    cd .. && \
+    printf '#!/bin/bash\nexport OPENSSL_CONF=/dev/null\n/opt/phantomjs-2.1.1-linux-x86_64/bin/phantomjs "\$@"' > /usr/local/bin/phantomjs && \
+    chmod +x /usr/local/bin/phantomjs && \
     # Install Hail from the CPG fork.
     git clone https://github.com/populationgenomics/hail.git && \
     cd hail && \
