--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -40,7 +40,7 @@ RUN apt-get update && \
     cd /opt && \
     curl -sSL https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2 | tar xj && \
     cd .. && \
-    printf '#!/bin/bash\nexport OPENSSL_CONF=/dev/null\n/opt/phantomjs-2.1.1-linux-x86_64/bin/phantomjs "\$@"' > /usr/local/bin/phantomjs && \
+    printf '#!/bin/bash\nexport OPENSSL_CONF=/dev/null\n/opt/phantomjs-2.1.1-linux-x86_64/bin/phantomjs "$@"\n' > /usr/local/bin/phantomjs && \
     chmod +x /usr/local/bin/phantomjs && \
     # Install Hail from the CPG fork.
     git clone https://github.com/populationgenomics/hail.git && \
