--- a/driver/Dockerfile.base
+++ b/driver/Dockerfile.base
@@ -10,12 +10,13 @@ RUN apt update && apt install -y \
         git \
         gnupg \
         jq \
+        python3 \
         skopeo \
         wget \
         zip && \
-    # Google Cloud SDK
-    echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
-    curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add - && \
-    apt update && apt install -y google-cloud-sdk && \
     rm -r /var/lib/apt/lists/* && \
-    rm -r /var/cache/apt/*
+    rm -r /var/cache/apt/* && \
+    # Google Cloud SDK: use the script-based installation, as the Debian package is outdated.
+    curl https://sdk.cloud.google.com > install.sh && \
+    bash install.sh --disable-prompts && \
+    rm install.sh
