--- a/driver/Dockerfile.base
+++ b/driver/Dockerfile.base
@@ -18,5 +18,7 @@ RUN apt update && apt install -y \
     rm -r /var/cache/apt/* && \
     # Google Cloud SDK: use the script-based installation, as the Debian package is outdated.
     curl https://sdk.cloud.google.com > install.sh && \
-    bash install.sh --disable-prompts && \
+    bash install.sh --disable-prompts --install-dir=/opt && \
     rm install.sh
+
+ENV PATH=$PATH:/opt/google-cloud-sdk/bin
